Fixed menu overlapping with main content on small screens. Fixed search query did not reset when switching tabs.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,3 +11,13 @@
 main {
   height: 94vh;
 }
+
+@media screen and (max-width: 1087px) {
+  .nav {
+    height: 22vh;
+  }
+  
+  main {
+    height: 78vh;
+  }
+}
